--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="open_orders">Open Orders</string>
+    <string name="closed_orders">Closed Orders</string>
+    <string name="login">Login</string>
+    <string name="enter_email_mobile">Enter Email ID or Mobile Number to login into your account</string>
+    <string name="email_mobile">Email ID / Mobile No</string>
+    <string name="password">Password</string>
+    <string name="remember_me">Remember Me</string>
+    <string name="forgot_pass">Forgot Password</string>
 </resources>
